--- a/index.html
+++ b/index.html
@@ -55,6 +55,62 @@
         <p></p>
       </div>
     </section>
+    <section class="container my-5">
+      <div class="text-center mb-4">
+        <h2 class="display-5">Sobre Nós</h2>
+        <p class="lead">Conheça nossa visão, missão e valores que nos guiam a oferecer o melhor para nossos pacientes.</p>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-4 mb-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <div class="card-icon">
+                <img src="./imgs/lampada-de-ideia.png" alt="Ícone Visão" class="img-fluid">
+              </div>
+              <h5 class="card-title">Visão</h5>
+              <p class="card-text">Ser reconhecida como uma clínica referência em atendimento odontológico inclusivo, 
+                onde cada paciente encontra acolhimento, respeito e excelência, independentemente de sua condição financeira
+               . buscamos ampliar o acesso á saúde bucal e construir uma sociedade onde o cuidado com o sorriso seja direto a todos </p>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <div class="card-icon">
+                <img src="./imgs/missao.png" alt="Ícone Missão" class="img-fluid">
+              </div>
+              <h5 class="card-title">Missão</h5>
+              <p class="card-text">Promover a saúde bucal de forma humanizada, ética e acessível, proporcionando
+                tratamentos odontológicos de qualidade a todas as classes sociais, com atenção especial ás pessaos 
+                com baixa renda. Nosso compromisso é tranformar sorrisos e elevar a autoestima, contribuindo para uma
+                vida mais saudável e feliz.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <div class="card-icon">
+                <img src="./imgs/valor.png" alt="Ícone Valores" class="img-fluid">
+              </div>
+              <h5 class="card-title">Valores</h5>
+              <p class="card-text">Tornar os tratamentos odontlógicos financeiramente mais viáveis para todas as pessoas,
+                especialmente para quem mais precisa.
+              </p>
+              <p class="card-text">Contrubuir para a inclusão e o bem-estar da comunidade, promovendo ações e projetos que incentivem
+                a prevenção e a educação em saúde bucal.
+              </p>
+              <p class="card-text">Atender cada paciente com empatia, carinho e respeito, valorizando suas histórias e necessidades.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  
   </main>
        
           
