Update finalizando homepage

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
         <div class="col-md-3 mb-4">
           <div class="card h-100">
-            <img src="./imgs/dentista3." class="card-img-top" alt="Diferencial 3">
+            <img src="./imgs/dentista3.jpg" class="card-img-top" alt="Diferencial 3">
             <div class="card-body">
               <h5 class="card-title2">Dra. Marina Costa</h5>
               <h6 class="card-stitle">Implantodontista</h6>
@@ -167,7 +167,7 @@
         </div>
         <div class="col-md-3 mb-4">
           <div class="card h-100">
-            <img src="./imgs/icone4.png" class="card-img-top" alt="Diferencial 4">
+            <img src="./imgs/dentista4.jpeg" class="card-img-top" alt="Diferencial 4">
             <div class="card-body">
               <h5 class="card-title2">Dr. Henrique Alves</h5>
               <h6 class="card-stitle">Cirurgião-dentista</h6>
@@ -177,11 +177,26 @@
         </div>
       </div>
     </section>
-
-
-
-
-  
+    <div class="d-flex justify-content-center mt-4">
+      <button class="btn btn-primary me-2">Prontuários</button>
+      <button class="btn btn-secondary">Agendamentos</button>
+    </div>
+    <footer class="bg-body-tertiary py-4 custom-footer">
+      <div class="container d-flex justify-content-between align-items-center">
+        <p class="mb-0 text-center w-100">© 2025 SmileOn.</p>
+        <div class="social-icons d-flex">
+          <a href="https://www.facebook.com" target="_blank" class="mx-2">
+            <img src="./imgs/facebook.png" alt="Facebook" width="30">
+          </a>
+          <a href="https://www.instagram.com" target="_blank" class="mx-2">
+            <img src="./imgs/instagram.png" alt="Instagram" width="30">
+          </a>
+          <a href="https://wa.me/1234567890" target="_blank" class="mx-2">
+            <img src="./imgs/whatsapp.png" alt="WhatsApp" width="30">
+          </a>
+        </div>
+      </div>
+    </footer>  
   </main>
        
           
