--- a/login.html
+++ b/login.html
@@ -50,20 +50,19 @@
       </header>
       <main>
   <div class="login-container">
-    <div class="logo">
-      <p>DRA. LETÍCIA MOLINA</p>
-      <p class="sub">Cirurgia Dentista</p>
-      <div class="icon">🦷</div>
+    <div class="logo mt-5">
+      <img src="./imgs/Logo sem fundo, Branca 1.png" alt="">
     </div>
 
-    <div class="login-box">
+
+   <div class="login-box">
     <div class="login">
       <div class="input-group">
-        <span class="icon">👤</span>
+        <span class="icon"><img src="./imgs/iconePessoa.png" alt="Logo do cpf"></span>
         <input type="text" placeholder="Digite seu CPF">
       </div>
       <div class="input-group">
-        <span class="icon">🔒</span>
+        <span class="icon"><img src="./imgs/iconeSenha.png" alt="Logo da senha"></span>
         <input type="password" placeholder="Digite sua senha">
       </div>
     </div>
